--- a/notebooks/partition_function.ipynb
+++ b/notebooks/partition_function.ipynb
@@ -161,38 +161,48 @@
     "\n",
     "n_points = 100\n",
     "\n",
-    "df = pd.DataFrame(\n",
-    "    {\n",
-    "        'c': np.tile(np.logspace(-10, -1, n_points), 2),\n",
-    "        'k_d_1': np.append(np.repeat(1e-6, n_points), np.repeat(1e-5, n_points)),\n",
-    "        'k_d_2': np.append(np.repeat(1e-6, n_points), np.repeat(1e-7, n_points)),\n",
-    "        'f_1': np.repeat(0.5, 2*n_points),\n",
-    "        'f_2': np.repeat(0.5, 2*n_points),\n",
-    "        'scenario': (['same affinities'] * n_points) + (['different affinities'] * n_points),\n",
-    "    }\n",
-    ").assign(\n",
-    "    distinct_epitopes=lambda x: (1 / (1 + x.c*x.f_1/x.k_d_1)) * (1 / (1 + x.c*x.f_2/x.k_d_2)),\n",
-    "    overlap_epitopes=lambda x: (1 / (1 + x.c*x.f_1/x.k_d_1 + x.c*x.f_2/x.k_d_2)),\n",
-    ").melt(\n",
-    "    id_vars=['c', 'k_d_1', 'k_d_2', 'f_1', 'f_2', 'scenario'],\n",
-    "    value_vars=['overlap_epitopes', 'distinct_epitopes'],\n",
-    "    var_name='assumption',\n",
-    "    value_name='p_unbound'\n",
+    "df = (\n",
+    "    pd.DataFrame(\n",
+    "        {\n",
+    "            \"c\": np.tile(np.logspace(-10, -1, n_points), 2),\n",
+    "            \"k_d_1\": np.append(np.repeat(1e-6, n_points), np.repeat(1e-5, n_points)),\n",
+    "            \"k_d_2\": np.append(np.repeat(1e-6, n_points), np.repeat(1e-7, n_points)),\n",
+    "            \"f_1\": np.repeat(0.5, 2 * n_points),\n",
+    "            \"f_2\": np.repeat(0.5, 2 * n_points),\n",
+    "            \"scenario\": ([\"same affinities\"] * n_points)\n",
+    "            + ([\"different affinities\"] * n_points),\n",
+    "        }\n",
+    "    )\n",
+    "    .assign(\n",
+    "        distinct_epitopes=lambda x: (1 / (1 + x.c * x.f_1 / x.k_d_1))\n",
+    "        * (1 / (1 + x.c * x.f_2 / x.k_d_2)),\n",
+    "        overlap_epitopes=lambda x: (\n",
+    "            1 / (1 + x.c * x.f_1 / x.k_d_1 + x.c * x.f_2 / x.k_d_2)\n",
+    "        ),\n",
+    "    )\n",
+    "    .melt(\n",
+    "        id_vars=[\"c\", \"k_d_1\", \"k_d_2\", \"f_1\", \"f_2\", \"scenario\"],\n",
+    "        value_vars=[\"overlap_epitopes\", \"distinct_epitopes\"],\n",
+    "        var_name=\"assumption\",\n",
+    "        value_name=\"p_unbound\",\n",
+    "    )\n",
     ")\n",
     "\n",
-    "df['scenario'] = df['scenario'].astype('category').cat.reorder_categories(\n",
-    "    ['same affinities', 'different affinities']\n",
+    "df[\"scenario\"] = (\n",
+    "    df[\"scenario\"]\n",
+    "    .astype(\"category\")\n",
+    "    .cat.reorder_categories([\"same affinities\", \"different affinities\"])\n",
     ")\n",
     "\n",
     "p = (\n",
-    "    ggplot(df, aes(x='c', y='p_unbound')) +\n",
-    "    geom_line(aes(color='assumption'), size=1) +\n",
-    "    facet_wrap('scenario') +\n",
-    "    labs(x='concentration') +\n",
-    "    scale_color_manual(values=['#ec5094', '#5c7594']) +\n",
-    "    scale_x_log10() +\n",
-    "    theme_classic() +\n",
-    "    theme(figure_size=(9, 3.5))\n",
+    "    ggplot(df, aes(x=\"c\", y=\"p_unbound\"))\n",
+    "    + geom_line(aes(color=\"assumption\"), size=1)\n",
+    "    + facet_wrap(\"scenario\")\n",
+    "    + labs(x=\"concentration\")\n",
+    "    + scale_color_manual(values=[\"#ec5094\", \"#5c7594\"])\n",
+    "    + scale_x_log10()\n",
+    "    + theme_classic()\n",
+    "    + theme(figure_size=(9, 3.5))\n",
     ")\n",
     "\n",
     "_ = p.draw()"
@@ -288,56 +298,59 @@
     "\n",
     "c_range = np.logspace(-8, -2, 4)\n",
     "Kds = np.logspace(-8, -2, 4)\n",
-    "fracs = np.array([0,0.25,0.5,0.75,1])\n",
+    "fracs = np.array([0, 0.25, 0.5, 0.75, 1])\n",
     "\n",
-    "df = pd.DataFrame(\n",
-    "    list(product(c_range, Kds, Kds, fracs, fracs)), \n",
-    "    columns=['c', 'k_d_1', 'k_d_2', 'f_1', 'f_2']\n",
-    ").assign(\n",
-    "    f_sum=lambda x: x.f_1 + x.f_2\n",
-    ").query(\n",
-    "    'f_sum == 1'\n",
-    ").assign(\n",
-    "    distinct_epitopes=lambda x: ((1 / (1 + x.c*x.f_1/x.k_d_1)) * (1 / (1 + x.c*x.f_2/x.k_d_2))).round(3),\n",
-    "    overlap_epitopes=lambda x: ((1 / (1 + x.c*x.f_1/x.k_d_1 + x.c*x.f_2/x.k_d_2))).round(3),\n",
-    "    log_c=lambda x: np.log10(x.c).astype(int),\n",
-    "    log_k_d_1=lambda x: np.log10(x.k_d_1).astype(int),\n",
-    "    log_k_d_2=lambda x: np.log10(x.k_d_2).astype(int),\n",
-    ").melt(\n",
-    "    id_vars=['log_c', 'log_k_d_1', 'log_k_d_2', 'f_1', 'f_2'],\n",
-    "    value_vars=['overlap_epitopes', 'distinct_epitopes'],\n",
-    "    var_name='assumption',\n",
-    "    value_name='p_unbound'\n",
+    "df = (\n",
+    "    pd.DataFrame(\n",
+    "        list(product(c_range, Kds, Kds, fracs, fracs)),\n",
+    "        columns=[\"c\", \"k_d_1\", \"k_d_2\", \"f_1\", \"f_2\"],\n",
+    "    )\n",
+    "    .assign(f_sum=lambda x: x.f_1 + x.f_2)\n",
+    "    .query(\"f_sum == 1\")\n",
+    "    .assign(\n",
+    "        distinct_epitopes=lambda x: (\n",
+    "            (1 / (1 + x.c * x.f_1 / x.k_d_1)) * (1 / (1 + x.c * x.f_2 / x.k_d_2))\n",
+    "        ).round(3),\n",
+    "        overlap_epitopes=lambda x: (\n",
+    "            (1 / (1 + x.c * x.f_1 / x.k_d_1 + x.c * x.f_2 / x.k_d_2))\n",
+    "        ).round(3),\n",
+    "        log_c=lambda x: np.log10(x.c).astype(int),\n",
+    "        log_k_d_1=lambda x: np.log10(x.k_d_1).astype(int),\n",
+    "        log_k_d_2=lambda x: np.log10(x.k_d_2).astype(int),\n",
+    "    )\n",
+    "    .melt(\n",
+    "        id_vars=[\"log_c\", \"log_k_d_1\", \"log_k_d_2\", \"f_1\", \"f_2\"],\n",
+    "        value_vars=[\"overlap_epitopes\", \"distinct_epitopes\"],\n",
+    "        var_name=\"assumption\",\n",
+    "        value_name=\"p_unbound\",\n",
+    "    )\n",
     ")\n",
     "\n",
-    "c_slider = alt.binding_range(min=-8, max=-2, step=2, name='log(c): ')\n",
-    "c_filter = alt.selection_point(fields=['log_c'], bind=c_slider, value=-6)\n",
+    "c_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(c): \")\n",
+    "c_filter = alt.selection_point(fields=[\"log_c\"], bind=c_slider, value=-6)\n",
     "\n",
-    "k_d_1_slider = alt.binding_range(min=-8, max=-2, step=2, name='log(Kd_1): ')\n",
-    "k_d_1_filter = alt.selection_point(fields=['log_k_d_1'], bind=k_d_1_slider, value=-6)\n",
+    "k_d_1_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(Kd_1): \")\n",
+    "k_d_1_filter = alt.selection_point(fields=[\"log_k_d_1\"], bind=k_d_1_slider, value=-6)\n",
     "\n",
-    "k_d_2_slider = alt.binding_range(min=-8, max=-2, step=2, name='log(Kd_2): ')\n",
-    "k_d_2_filter = alt.selection_point(fields=['log_k_d_2'], bind=k_d_2_slider, value=-6)\n",
+    "k_d_2_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(Kd_2): \")\n",
+    "k_d_2_filter = alt.selection_point(fields=[\"log_k_d_2\"], bind=k_d_2_slider, value=-6)\n",
     "\n",
-    "f_1_slider = alt.binding_range(min=0, max=1, step=0.25, name='f_1: ')\n",
-    "f_1_filter = alt.selection_point(fields=['f_1'], bind=f_1_slider, value=0.5)\n",
+    "f_1_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"f_1: \")\n",
+    "f_1_filter = alt.selection_point(fields=[\"f_1\"], bind=f_1_slider, value=0.5)\n",
     "\n",
     "alt.Chart(df).mark_bar().encode(\n",
-    "    x='p_unbound:Q',\n",
+    "    x=\"p_unbound:Q\",\n",
     "    y=alt.Y(\"assumption:O\", axis=alt.Axis(title=\"\")),\n",
-    "    color=alt.Color(\"assumption:O\", legend=None,\n",
-    "            scale=alt.Scale(\n",
-    "                domain=[\"distinct_epitopes\", \"overlap_epitopes\"],\n",
-    "                range=[\"#ec5094\", \"#5c7594\"],\n",
-    "            )\n",
+    "    color=alt.Color(\n",
+    "        \"assumption:O\",\n",
+    "        legend=None,\n",
+    "        scale=alt.Scale(\n",
+    "            domain=[\"distinct_epitopes\", \"overlap_epitopes\"],\n",
+    "            range=[\"#ec5094\", \"#5c7594\"],\n",
+    "        ),\n",
     "    ),\n",
-    "    tooltip=[\"assumption:O\", \"p_unbound:O\"]\n",
-    ").add_parameter(\n",
-    "    f_1_filter,\n",
-    "    k_d_2_filter,\n",
-    "    k_d_1_filter,\n",
-    "    c_filter\n",
-    ").transform_filter(\n",
+    "    tooltip=[\"assumption:O\", \"p_unbound:O\"],\n",
+    ").add_parameter(f_1_filter, k_d_2_filter, k_d_1_filter, c_filter).transform_filter(\n",
     "    f_1_filter\n",
     ").transform_filter(\n",
     "    k_d_2_filter\n",
@@ -345,7 +358,9 @@
     "    k_d_1_filter\n",
     ").transform_filter(\n",
     "    c_filter\n",
-    ").properties(height=60, width=400, title='p_unbound in a two-epitope model')"
+    ").properties(\n",
+    "    height=60, width=400, title=\"p_unbound in a two-epitope model\"\n",
+    ")"
    ]
   },
   {
@@ -452,68 +467,77 @@
    "source": [
     "c_range = np.logspace(-8, -2, 4)\n",
     "Kds = np.logspace(-6, -2, 3)\n",
-    "fracs = np.array([0,0.25,0.5,0.75,1])\n",
+    "fracs = np.array([0, 0.25, 0.5, 0.75, 1])\n",
     "\n",
-    "df = pd.DataFrame(\n",
-    "    list(product(c_range, Kds, Kds, Kds, fracs, fracs, fracs)), \n",
-    "    columns=['c', 'k_d_1', 'k_d_2', 'k_d_3', 'f_1', 'f_2', 'f_3']\n",
-    ").assign(\n",
-    "    f_sum=lambda x: x.f_1 + x.f_2 + x.f_3\n",
-    ").query(\n",
-    "    'f_sum == 1'\n",
-    ").assign(\n",
-    "    distinct_epitopes=lambda x: (\n",
-    "        (1 / (1 + x.c*x.f_1/x.k_d_1)) * (1 / (1 + x.c*x.f_2/x.k_d_2)) * (1 / (1 + x.c*x.f_3/x.k_d_3))\n",
-    "    ).round(3),\n",
-    "    overlap_epitopes=lambda x: (\n",
-    "        (1 / (1 + x.c*x.f_1/x.k_d_1 + x.c*x.f_2/x.k_d_2 + x.c*x.f_3/x.k_d_3))\n",
-    "    ).round(3),\n",
-    "    log_c=lambda x: np.log10(x.c).astype(int),\n",
-    "    log_k_d_1=lambda x: np.log10(x.k_d_1).astype(int),\n",
-    "    log_k_d_2=lambda x: np.log10(x.k_d_2).astype(int),\n",
-    "    log_k_d_3=lambda x: np.log10(x.k_d_3).astype(int),\n",
-    ").melt(\n",
-    "    id_vars=['log_c', 'log_k_d_1', 'log_k_d_2', 'log_k_d_3', 'f_1', 'f_2', 'f_3'],\n",
-    "    value_vars=['overlap_epitopes', 'distinct_epitopes'],\n",
-    "    var_name='assumption',\n",
-    "    value_name='p_unbound'\n",
+    "df = (\n",
+    "    pd.DataFrame(\n",
+    "        list(product(c_range, Kds, Kds, Kds, fracs, fracs, fracs)),\n",
+    "        columns=[\"c\", \"k_d_1\", \"k_d_2\", \"k_d_3\", \"f_1\", \"f_2\", \"f_3\"],\n",
+    "    )\n",
+    "    .assign(f_sum=lambda x: x.f_1 + x.f_2 + x.f_3)\n",
+    "    .query(\"f_sum == 1\")\n",
+    "    .assign(\n",
+    "        distinct_epitopes=lambda x: (\n",
+    "            (1 / (1 + x.c * x.f_1 / x.k_d_1))\n",
+    "            * (1 / (1 + x.c * x.f_2 / x.k_d_2))\n",
+    "            * (1 / (1 + x.c * x.f_3 / x.k_d_3))\n",
+    "        ).round(3),\n",
+    "        overlap_epitopes=lambda x: (\n",
+    "            (\n",
+    "                1\n",
+    "                / (\n",
+    "                    1\n",
+    "                    + x.c * x.f_1 / x.k_d_1\n",
+    "                    + x.c * x.f_2 / x.k_d_2\n",
+    "                    + x.c * x.f_3 / x.k_d_3\n",
+    "                )\n",
+    "            )\n",
+    "        ).round(3),\n",
+    "        log_c=lambda x: np.log10(x.c).astype(int),\n",
+    "        log_k_d_1=lambda x: np.log10(x.k_d_1).astype(int),\n",
+    "        log_k_d_2=lambda x: np.log10(x.k_d_2).astype(int),\n",
+    "        log_k_d_3=lambda x: np.log10(x.k_d_3).astype(int),\n",
+    "    )\n",
+    "    .melt(\n",
+    "        id_vars=[\"log_c\", \"log_k_d_1\", \"log_k_d_2\", \"log_k_d_3\", \"f_1\", \"f_2\", \"f_3\"],\n",
+    "        value_vars=[\"overlap_epitopes\", \"distinct_epitopes\"],\n",
+    "        var_name=\"assumption\",\n",
+    "        value_name=\"p_unbound\",\n",
+    "    )\n",
     ")\n",
     "\n",
-    "c_slider = alt.binding_range(min=-8, max=-2, step=2, name='log(c): ')\n",
-    "c_filter = alt.selection_point(fields=['log_c'], bind=c_slider, value=-4)\n",
+    "c_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(c): \")\n",
+    "c_filter = alt.selection_point(fields=[\"log_c\"], bind=c_slider, value=-4)\n",
     "\n",
-    "k_d_1_slider = alt.binding_range(min=-6, max=-2, step=2, name='log(Kd_1): ')\n",
-    "k_d_1_filter = alt.selection_point(fields=['log_k_d_1'], bind=k_d_1_slider, value=-4)\n",
+    "k_d_1_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(Kd_1): \")\n",
+    "k_d_1_filter = alt.selection_point(fields=[\"log_k_d_1\"], bind=k_d_1_slider, value=-4)\n",
     "\n",
-    "k_d_2_slider = alt.binding_range(min=-6, max=-2, step=2, name='log(Kd_2): ')\n",
-    "k_d_2_filter = alt.selection_point(fields=['log_k_d_2'], bind=k_d_2_slider, value=-4)\n",
+    "k_d_2_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(Kd_2): \")\n",
+    "k_d_2_filter = alt.selection_point(fields=[\"log_k_d_2\"], bind=k_d_2_slider, value=-4)\n",
     "\n",
-    "k_d_3_slider = alt.binding_range(min=-6, max=-2, step=2, name='log(Kd_3): ')\n",
-    "k_d_3_filter = alt.selection_point(fields=['log_k_d_3'], bind=k_d_3_slider, value=-4)\n",
+    "k_d_3_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(Kd_3): \")\n",
+    "k_d_3_filter = alt.selection_point(fields=[\"log_k_d_3\"], bind=k_d_3_slider, value=-4)\n",
     "\n",
-    "f_1_slider = alt.binding_range(min=0, max=1, step=0.25, name='f_1: ')\n",
-    "f_1_filter = alt.selection_point(fields=['f_1'], bind=f_1_slider, value=0.5)\n",
+    "f_1_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"f_1: \")\n",
+    "f_1_filter = alt.selection_point(fields=[\"f_1\"], bind=f_1_slider, value=0.5)\n",
     "\n",
-    "f_2_slider = alt.binding_range(min=0, max=1, step=0.25, name='f_2: ')\n",
-    "f_2_filter = alt.selection_point(fields=['f_2'], bind=f_2_slider, value=0.5)\n",
+    "f_2_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"f_2: \")\n",
+    "f_2_filter = alt.selection_point(fields=[\"f_2\"], bind=f_2_slider, value=0.5)\n",
     "\n",
     "alt.Chart(df).mark_bar().encode(\n",
-    "    x='p_unbound:Q',\n",
+    "    x=\"p_unbound:Q\",\n",
     "    y=alt.Y(\"assumption:O\", axis=alt.Axis(title=\"\")),\n",
-    "    color=alt.Color(\"assumption:O\", legend=None,\n",
-    "            scale=alt.Scale(\n",
-    "                domain=[\"distinct_epitopes\", \"overlap_epitopes\"],\n",
-    "                range=[\"#ec5094\", \"#5c7594\"],\n",
-    "            )\n",
+    "    color=alt.Color(\n",
+    "        \"assumption:O\",\n",
+    "        legend=None,\n",
+    "        scale=alt.Scale(\n",
+    "            domain=[\"distinct_epitopes\", \"overlap_epitopes\"],\n",
+    "            range=[\"#ec5094\", \"#5c7594\"],\n",
+    "        ),\n",
     "    ),\n",
-    "    tooltip=[\"assumption:O\", \"p_unbound:O\"]\n",
+    "    tooltip=[\"assumption:O\", \"p_unbound:O\"],\n",
     ").add_parameter(\n",
-    "    f_2_filter,\n",
-    "    f_1_filter,\n",
-    "    k_d_3_filter,\n",
-    "    k_d_2_filter,\n",
-    "    k_d_1_filter,\n",
-    "    c_filter\n",
+    "    f_2_filter, f_1_filter, k_d_3_filter, k_d_2_filter, k_d_1_filter, c_filter\n",
     ").transform_filter(\n",
     "    f_2_filter\n",
     ").transform_filter(\n",
@@ -526,7 +550,9 @@
     "    k_d_1_filter\n",
     ").transform_filter(\n",
     "    c_filter\n",
-    ").properties(height=60, width=400, title='p_unbound in a three-epitope model')"
+    ").properties(\n",
+    "    height=60, width=400, title=\"p_unbound in a three-epitope model\"\n",
+    ")"
    ]
   }
  ],
