--- a/notebooks/specify_epitopes.ipynb
+++ b/notebooks/specify_epitopes.ipynb
@@ -1004,9 +1004,9 @@
    ],
    "source": [
     "(\n",
-    "    ggplot(ic90_data, aes(x='predicted_log_IC90', y='log_IC90')) \n",
+    "    ggplot(ic90_data, aes(x=\"predicted_log_IC90\", y=\"log_IC90\"))\n",
     "    + geom_point(alpha=0.05, size=1)\n",
-    "    + facet_wrap('number_fit_epitopes')\n",
+    "    + facet_wrap(\"number_fit_epitopes\")\n",
     "    + theme_classic()\n",
     "    + theme(figure_size=(8, 2.5))\n",
     ")"
@@ -1800,9 +1800,9 @@
    ],
    "source": [
     "(\n",
-    "    ggplot(ic90_data, aes(x='predicted_log_IC90', y='log_IC90')) \n",
+    "    ggplot(ic90_data, aes(x=\"predicted_log_IC90\", y=\"log_IC90\"))\n",
     "    + geom_point(alpha=0.05, size=1)\n",
-    "    + facet_wrap('epitope_seeding', ncol=2)\n",
+    "    + facet_wrap(\"epitope_seeding\", ncol=2)\n",
     "    + theme_classic()\n",
     "    + theme(figure_size=(6, 5.5))\n",
     ")"
