change slider labels

--- a/notebooks/partition_function.ipynb
+++ b/notebooks/partition_function.ipynb
@@ -326,16 +326,16 @@
     "    )\n",
     ")\n",
     "\n",
-    "c_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(c): \")\n",
+    "c_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(sera concentration): \")\n",
     "c_filter = alt.selection_point(fields=[\"log_c\"], bind=c_slider, value=-6)\n",
     "\n",
-    "k_d_1_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(Kd_1): \")\n",
+    "k_d_1_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(antibody 1 Kd): \")\n",
     "k_d_1_filter = alt.selection_point(fields=[\"log_k_d_1\"], bind=k_d_1_slider, value=-6)\n",
     "\n",
-    "k_d_2_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(Kd_2): \")\n",
+    "k_d_2_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(antibody 2 Kd): \")\n",
     "k_d_2_filter = alt.selection_point(fields=[\"log_k_d_2\"], bind=k_d_2_slider, value=-6)\n",
     "\n",
-    "f_1_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"f_1: \")\n",
+    "f_1_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"antibody 1 fraction: \")\n",
     "f_1_filter = alt.selection_point(fields=[\"f_1\"], bind=f_1_slider, value=0.5)\n",
     "\n",
     "alt.Chart(df).mark_bar().encode(\n",
@@ -506,22 +506,22 @@
     "    )\n",
     ")\n",
     "\n",
-    "c_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(c): \")\n",
+    "c_slider = alt.binding_range(min=-8, max=-2, step=2, name=\"log(sera concentration): \")\n",
     "c_filter = alt.selection_point(fields=[\"log_c\"], bind=c_slider, value=-4)\n",
     "\n",
-    "k_d_1_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(Kd_1): \")\n",
+    "k_d_1_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(antibody 1 Kd): \")\n",
     "k_d_1_filter = alt.selection_point(fields=[\"log_k_d_1\"], bind=k_d_1_slider, value=-4)\n",
     "\n",
-    "k_d_2_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(Kd_2): \")\n",
+    "k_d_2_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(antibody 2 Kd): \")\n",
     "k_d_2_filter = alt.selection_point(fields=[\"log_k_d_2\"], bind=k_d_2_slider, value=-4)\n",
     "\n",
-    "k_d_3_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(Kd_3): \")\n",
+    "k_d_3_slider = alt.binding_range(min=-6, max=-2, step=2, name=\"log(antibody 3 Kd): \")\n",
     "k_d_3_filter = alt.selection_point(fields=[\"log_k_d_3\"], bind=k_d_3_slider, value=-4)\n",
     "\n",
-    "f_1_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"f_1: \")\n",
+    "f_1_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"antibody 1 fraction: \")\n",
     "f_1_filter = alt.selection_point(fields=[\"f_1\"], bind=f_1_slider, value=0.5)\n",
     "\n",
-    "f_2_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"f_2: \")\n",
+    "f_2_slider = alt.binding_range(min=0, max=1, step=0.25, name=\"antibody 2 fraction: \")\n",
     "f_2_filter = alt.selection_point(fields=[\"f_2\"], bind=f_2_slider, value=0.5)\n",
     "\n",
     "alt.Chart(df).mark_bar().encode(\n",
