--- a/notebooks/partition_function.ipynb
+++ b/notebooks/partition_function.ipynb
@@ -339,7 +339,7 @@
     "f_1_filter = alt.selection_point(fields=[\"f_1\"], bind=f_1_slider, value=0.5)\n",
     "\n",
     "alt.Chart(df).mark_bar().encode(\n",
-    "    x=alt.X(\"p_unbound:Q\", scale=alt.Scale(domain=[0,1])),\n",
+    "    x=alt.X(\"p_unbound:Q\", scale=alt.Scale(domain=[0, 1])),\n",
     "    y=alt.Y(\"assumption:O\", axis=alt.Axis(title=\"\")),\n",
     "    color=alt.Color(\n",
     "        \"assumption:O\",\n",
@@ -525,7 +525,7 @@
     "f_2_filter = alt.selection_point(fields=[\"f_2\"], bind=f_2_slider, value=0.5)\n",
     "\n",
     "alt.Chart(df).mark_bar().encode(\n",
-    "    x=alt.X(\"p_unbound:Q\", scale=alt.Scale(domain=[0,1])),\n",
+    "    x=alt.X(\"p_unbound:Q\", scale=alt.Scale(domain=[0, 1])),\n",
     "    y=alt.Y(\"assumption:O\", axis=alt.Axis(title=\"\")),\n",
     "    color=alt.Color(\n",
     "        \"assumption:O\",\n",
