fix epitope harmony test after regularizing weights

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -135,8 +135,8 @@
    "outputs": [],
    "source": [
     "random.seed(1)\n",
-    "_ = poly_one.fit(fit_site_level_first=False)\n",
-    "_ = poly_two.fit(fit_site_level_first=False)"
+    "_ = poly_one.fit(fit_site_level_first=False, reg_activity_weight=0)\n",
+    "_ = poly_two.fit(fit_site_level_first=False, reg_activity_weight=0)"
    ]
   },
   {
