--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -46,10 +46,11 @@
    "metadata": {},
    "source": [
     "## Regularization\n",
-    "We also regularize the $\\beta_{m,e}$ values based on the notions:\n",
+    "We also regularize the mutation escape values ($\\beta_{m,e}$) and the epitope activities ($a_{\\rm{wt}, e}$) based on the notions:\n",
     "\n",
     " 1. Most mutations should not mediate escape,\n",
     " 2. When a site is involved in escape for a given epitope, most mutations at a site will have similar-ish effects.\n",
+    " 3. Epitope activities should be small (or negative) except when clear evidence to the contrary.\n",
     "\n",
     "### Regularization of escape values \n",
     "We regularize the escape values $\\beta_{m,e}$ using a simple Pseudo-Huber function, so that\n",
@@ -59,7 +60,12 @@
     "### Regularization of spread of escape values at each site and epitope\n",
     "We regularize the variance of the escape values at each site, so that\n",
     "$$R_{\\rm{spread}} = \\lambda_{\\rm{spread}} \\sum_{e,i} \\frac{1}{M_i}\\sum_{m \\in i}\\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)^2$$\n",
-    "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$."
+    "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$.\n",
+    "\n",
+    "### Regularization of epitope activities\n",
+    "We regularize the epitope activities $a_{\\rm{wt}, e}$ the wildtype activities so that the regularization is 0 when the activity is negative and a Pseudo-Huber function when the activity is positive, so that\n",
+    "$$R_{\\rm{activity}} = \\lambda_{\\rm{activity}} \\sum_e \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0\\end{cases} $$\n",
+    "where $\\lambda_{\\rm{activity}}$ is the strength of the regularization and $\\delta_{\\rm{activity}}$ is the Psdeuo-Huber delta parameter."
    ]
   },
   {
@@ -161,10 +167,22 @@
   {
    "cell_type": "markdown",
    "id": "99c9e3ab-505d-4fc3-9f66-11e064e031f7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}}$\n",
     "$$\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}} = \\frac{2\\lambda_{\\rm{spread}}}{M_i} \\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4faa44e7-c8e6-4016-8ffc-cacd523da8c0",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}}$\n",
+    "\n",
+    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} = \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ \\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0 \\end{cases}$$"
    ]
   },
   {
