--- a/notebooks/fit_RBD.ipynb
+++ b/notebooks/fit_RBD.ipynb
@@ -694,6 +694,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "import numpy\n",
     "\n",
     "from plotnine import *\n",
