--- a/RBD_bootstrap.ipynb
+++ b/RBD_bootstrap.ipynb
@@ -1380,6 +1380,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "p = (\n",
     "    ggplot(pred_ic90s)\n",
     "    + aes(\"IC90\", \"mean_predicted_IC90\")\n",
