committing some changes that were hanging around

--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -119,6 +119,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "48f04c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: (array([0]),), 2: (array([1]),), 4: (array([2, 3, 4]),)}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model._binary_sites"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "18a525e1-61ca-4d0a-aada-f473450fb19a",
    "metadata": {},
